RadTest Dev/src/objects/Pharma_Products__c.object
<CustomObject>
    <description>Products of State Farm</description>
    <fields>
        <fullName>Business_Type__c</fullName>
        <inlineHelpText>Enter the Type of the Business</inlineHelpText>
        <label>Business Type</label>
        <picklist>
            <picklistValues>
                <fullName>Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cosmetics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trading</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inventroy__c</fullName>
        <inlineHelpText>Enter the Stock quantity of inventory</inlineHelpText>
        <label>Inventroy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <inlineHelpText>Enter the Manufacturer Name</inlineHelpText>
        <label>Manufacturer</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <inlineHelpText>Enter the price of the Product</inlineHelpText>
        <label>Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Spec__c</fullName>
        <inlineHelpText>Enter the specification of Product</inlineHelpText>
        <label>Product Spec</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <inlineHelpText>Enter the type of the Product</inlineHelpText>
        <label>Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>Liquid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capsules</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lotion</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sample_Product_Minimum_qty__c</fullName>
        <label>Sample Product Minimum qty</label>
        <summarizedField>Sample_Product__c.Quantity__c</summarizedField>
        <summaryForeignKey>Sample_Product__c.Pharma_Product__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Sample_Product__c</fullName>
        <label>Total Sample Product</label>
        <summaryForeignKey>Sample_Product__c.Pharma_Product__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Sample_Qty__c</fullName>
        <label>Total Sample Qty</label>
        <summarizedField>Sample_Product__c.Quantity__c</summarizedField>
        <summaryFilterItems>
            <field>Sample_Product__c.Quantity__c</field>
            <operation>greaterThan</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryForeignKey>Sample_Product__c.Pharma_Product__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Pharma Product</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Pharma Products Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pharma Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>